samples/_failures_safe/1761084354_344c6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b821d19a.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_b821d19a.c:167:5: error: expected declaration or statement at end of input
  167 |     Parser parser;
      |     ^~~~~~
